Fixed scrollbar issue on Firefox

--- a/projects/ccf-eui/src/app/modules/ontology-exploration/ontology-tree/ontology-tree.component.scss
+++ b/projects/ccf-eui/src/app/modules/ontology-exploration/ontology-tree/ontology-tree.component.scss
@@ -1,7 +1,7 @@
 .ccf-ontology-tree {
   background: none;
   scrollbar-width: thin;
-  height: calc(100% - 5.625rem);
+  height: calc(100vh - 14rem);
   width: 25.25rem;
   overflow: auto;
   overflow-x: hidden;
